# maltego-trx

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Maltego.py  README.md  jake-whitelist.json  legacy_example.py  poetry.toml  pyproject.toml  requirements.txt  server.py  setup.py
.github/workflows/: pypa-pip-audit.yml  pythonx-boot-check.yaml  pythonx-pytest.yaml  sonatype-jack.yml
demo/: Dockerfile  docker-compose.yml
demo/apache/: Dockerfile  TRX.conf  docker-compose.yml  prod.yml  project.py
demo/gunicorn/: Dockerfile  TRX.service  docker-compose.yml  prod-ssl.yml  prod.yml  project.py  requirements.txt
demo/transforms/: DNSToIP.py
deployments/apache/: Dockerfile  docker-compose.yml  maltego-trx.conf  project.wsgi
deployments/gunicorn/: docker-compose.yml  nginx.Dockerfile  nginx.conf  production.docker-compose.yml
docs/source/: changelog.md  cli.md  conf.py  getting_started.md  index.rst  legacy_transforms.md  reference.md  (+3 more)
libs/: Maltego.py  discovery.py  entities.py  request_body.xml  test_message.py  tests.py  transform.py  utils.py
maltego_trx/: __init__.py  commands.py  contants.py  decorator_registry.py  entities.py  handler.py  legacy.py  legacy_registry.py  maltego.py  mtz.py  oauth.py  overlays.py  registry.py  request_body.xml  server.py  test_entity.xml  test_hierarchical_entity.xml  transform.py  utils.py  xml.py
tests/: requirements.txt  test.py  test_decorator_registry.py  test_mtz.py  test_private_key.pem  test_property_mapping.py  test_registry.py  test_request.xml  test_xml.py
transforms/: DNSToIP.py  GreetPerson.py
(+32 files in other folders)
