[tool.poetry]
name = "maltego-trx"
version = "1.7.0"
description = "Python library used to develop Maltego transforms"
authors = ["Maltego Staff <support@maltego.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
Flask = ">=1"
six = ">=1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
syrupy = "^2.3.1"
petname = "^2.6"
Sphinx = "^5.1.1"
furo = "^2022.6.21"
myst-parser = "^0.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
